--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -6,5 +6,17 @@ PAYSTACK_BASE_URL=https://api.paystack.co
 PAYSTACK_SECRET_KEY=
 PAYSTACK_WEBHOOK_SECRET=
 
+# x402 / paid API access
+THIRDWEB_SECRET_KEY=
+X402_SERVER_WALLET=
+X402_NETWORK=celo
+X402_PRICE_QUOTE=$0.001
+X402_PRICE_PAYOUT=$0.02
+X402_PRICE_LIQUIDITY=$0.005
+X402_PRICE_SETTLEMENT=$0.005
+
+# Internal bypass (owner/admin), optional
+OWNER_API_KEY=
+
 DEFAULT_FEE_BPS=150
 DEFAULT_NGN_RATE=1500
