--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "pg": "^8.13.1",
+    "thirdweb": "^5.105.41",
     "zod": "^3.24.1"
   },
   "devDependencies": {
