PR3: add watcher ingestion, idempotent settlements, and fee ledger entries

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -18,5 +18,11 @@ X402_PRICE_SETTLEMENT=$0.005
 # Internal bypass (owner/admin), optional
 OWNER_API_KEY=
 
+# Watcher ingestion auth + confirmation policy
+WATCHER_AUTH_TOKEN=
+MIN_CONFIRMATIONS_CUSD_CELO=1
+MIN_CONFIRMATIONS_USDC_BASE=1
+MIN_CONFIRMATIONS_USDCX_STACKS=1
+
 DEFAULT_FEE_BPS=150
 DEFAULT_NGN_RATE=1500
