feat(debug): add order debug endpoint and RPC env alias fallback

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -24,5 +24,12 @@ MIN_CONFIRMATIONS_CUSD_CELO=1
 MIN_CONFIRMATIONS_USDC_BASE=1
 MIN_CONFIRMATIONS_USDCX_STACKS=1
 
+# RPC endpoints used by chain verifier (supports either naming style)
+RPC_URL_CELO=
+RPC_URL_BASE=
+# Backward-compatible aliases:
+CELO_RPC_URL=
+BASE_RPC_URL=
+
 DEFAULT_FEE_BPS=150
 DEFAULT_NGN_RATE=1500
