fix(settlement): add 40s precheck delay and retry for pending tx verification

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -23,6 +23,10 @@ WATCHER_AUTH_TOKEN=
 MIN_CONFIRMATIONS_CUSD_CELO=1
 MIN_CONFIRMATIONS_USDC_BASE=1
 MIN_CONFIRMATIONS_USDCX_STACKS=1
+# Delay + retry to reduce false negatives when tx is newly broadcast
+SETTLEMENT_PRECHECK_DELAY_MS=40000
+SETTLEMENT_VERIFY_RETRY_DELAY_MS=15000
+SETTLEMENT_VERIFY_MAX_ATTEMPTS=3
 
 # RPC endpoints used by chain verifier (supports either naming style)
 RPC_URL_CELO=
